--- a/00-T1-CS1B-FIA-April-2024/T1_Question_05.Rmd
+++ b/00-T1-CS1B-FIA-April-2024/T1_Question_05.Rmd
@@ -1,4 +1,31 @@
-5 An insurance company, which currently only sells home insurance, is interested in
+---
+title: "Statistics with R"
+subtitle: "Statistical Modelling with R for Actuarial Students"
+output:
+  xaringan::moon_reader:
+    lib_dir: libs
+    nature:
+      highlightStyle: github
+      countIncrementalSlides: false
+---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(magrittr)
+library(knitr)
+library(dplyr)
+library(janitor)
+
+
+```
+
+```{css, echo=FALSE}
+pre {
+  background: #ADD8E6;
+  max-width: 100%;
+  overflow-x: scroll;
+}
+```5 An insurance company, which currently only sells home insurance, is interested in
 entering the car insurance market. An underwriting manager at the company believes
 that the age and gender of the policyholder will be the most important factors in
 estimating the number of claims made under a car insurance policy.
@@ -15,7 +42,7 @@ claim_count – this is the number of car insurance claims reported by the
 policyholder over the past 3 years.
 (i) Fit a normal linear regression model to the data using claim_count as the
 response variable and age as the explanatory variable. Your answer should
-include the estimated intercept and slope of the regression line. [3]
+include the estimated intercept and slope of the regression line. 
 A colleague suggests that the response variable would be better modelled as having a
 Poisson distribution.
 (ii) Fit a Generalised Linear Model (GLM) to the data using claim_count as
@@ -26,11 +53,11 @@ fitted model. [4]
 The underwriting manager wishes to compare the fit of the GLM in part (ii) against
 that of the normal linear regression model in part (i).
 (iii) Explain why scaled deviances cannot be used to compare the fit of the models
-in parts (i) and (ii). [3]
+in parts (i) and (ii). 
 (iv) Fit, by choosing a suitable argument for family in the glm command, a
 GLM to the data that is equivalent to the model fitted in part (i). Your answer
 should include the estimated coefficients and the AIC of this fitted model. [4]
-(v) Compare the fit of the models fitted in parts (ii) and (iv). [2]
+(v) Compare the fit of the models fitted in parts (ii) and (iv). 
 CS1B A2024–7
 The underwriting manager believes the Poisson GLM would be improved by adding
 the explanatory variable gender as well as its interaction with age.
